--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap-icons": "^1.7.2",
     "react-data-grid": "^7.0.0-beta.11",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.2.2",
